# omega-agi-supremacy

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  deploy.sh  docker-compose.yml  install.sh  launcher.sh  setup_wizard.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  python-ci.yml  rust-ci.yml
agi-system/core/: agi_engine.py
agi-system/evolution/: evolution_engine.py
agi-system/genes/: gene_storage.py
agi-system/memory/: memory_system.py
agi-system/tools/: tool_registry.py
docs/: APEX-SearchSkill-Architecture.md  competitive_analysis_report.md  supremacy_implementation_plan.md
evolution-core/: EVOLUTION_LOG.md  apex_v2.db  evomap.json  gene_bank.json
examples/: basic_usage.rs  evolution_example.py  swarm_example.py
harness-core/: audit_cli.py  audit_engine.py
learning-tracks/: apex-learning-plan.json
omega-agi/: Cargo.toml  Dockerfile
omega-agi/adapters/: Cargo.toml
omega-agi/adapters/src/: hermes_adapter.rs  lib.rs  openclaw_adapter.rs  openhuman_adapter.rs
omega-agi/engineering/: Cargo.toml
omega-agi/engineering/src/: code_generator.rs  lib.rs  pr_manager.rs  quality_gates.rs  reviewer.rs  swe_bench.rs  test_harness.rs
omega-agi/hypercore/: Cargo.toml
omega-agi/hypercore/src/: diagnostics.rs  errors.rs  health.rs  lib.rs  logging.rs  memory.rs  pipeline.rs  scheduler.rs  security.rs  self_heal.rs  session.rs
omega-agi/hypercore/tests/: integration_test.rs
omega-agi/optimization/: Cargo.toml  Dockerfile
omega-agi/optimization/src/: lib.rs  main.rs  performance_optimizer.rs
omega-agi/runtime/: Cargo.toml  Dockerfile
omega-agi/runtime/src/: actor.rs  effect.rs  graph_executor.rs  lib.rs  main.rs  ml_inference.rs  wasm_sandbox.rs
omega-agi/runtime/src/engineering/: mod.rs
omega-agi/runtime/src/swarm/: consensus.rs  coordinator.rs  crdt.rs  health_monitor.rs  mod.rs  task_router.rs
omega-agi/src/: main.rs
omega_pipeline/: cross_project_learning.py  master_pipeline.py  quality_gates.py  self_evolution_loop.py  self_healing.py  super_agi_predictor.py
reports/: report-2026-05-22-ApexSpiral-agent-orchestrator.json  report-2026-05-22-ApexSpiral-memory-system.json
scripts/: auto_recovery.sh  auto_repair.py  fault_diagnosis.py  fault_patterns.yaml  health_check.sh  health_monitor.rs  health_monitor.yaml  self_diagnosis.py  setup.sh
self-evolution/: analyzer.py  evolver.py  evomap.json  fetcher.py  gene_bank.json  genes.json  runner.py  storage.py  system_state.json
tests/: test_integration.py
web_ui/: app.py  config_manager.py
web_ui/static/css/: style.css
web_ui/static/js/: main.js
web_ui/templates/: config.html  diagnostics.html  index.html  status.html  wizard.html
