[package]
name = "omega-adapters"
version = "0.1.0"
edition = "2021"
authors = ["OMEGA AGI <Omega@agi.system>"]
description = "OMEGA AGI Adapter Layer - OpenClaw, Hermes, OpenHuman compatibility"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "parking_lot", "sync"] }
futures = "0.3"
async-trait = "0.1.81"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"