[package]
name = "omega-engineering"
version = "0.1.0"
edition = "2021"
authors = ["OMEGA AGI <omega@agi.system>"]
description = "CMMI Level 5 Engineering Quality Gates - Rust implementation for OMEGA AGI pipeline"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
anyhow = "1"
thiserror = "1"
walkdir = "2"
concat = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1