[package]
name = "omega-hypercore"
version = "0.1.0"
edition = "2021"
authors = ["OMEGA AGI <omega@agi.system>"]
description = "Zero-allocation async runtime with persistent memory and capability security"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "parking_lot"] }
futures = "0.3"
async-trait = "0.1"

# Memory
memmap2 = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
