[package]
name = "optimization"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = { version = "0.15", features = ["serde"] }
rand = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
tracing = "0.1"
regex = "1.10"

[dev-dependencies]
criterion = "0.5"